app/helm/ingress/agrocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /argocd/$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /argocd(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: argocd-server
              port:
                number: 80
