app/helm/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-sample-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        # Existing app
        - path: /a
          pathType: Prefix
          backend:
            service: 
              name: nginx-app-service
              port:
                number: 80
        # Grafana
